--- a/asm_project02.vcxproj.filters
+++ b/asm_project02.vcxproj.filters
@@ -19,4 +19,9 @@
       <Filter>Source Files</Filter>
     </MASM>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="README">
+      <Filter>Source Files</Filter>
+    </None>
+  </ItemGroup>
 </Project>
