--- a/asm_project02.vcxproj.filters
+++ b/asm_project02.vcxproj.filters
@@ -15,8 +15,13 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <MASM Include="AddTwoSum_64.asm">
+    <MASM Include="SumArray_64.asm">
       <Filter>Source Files</Filter>
     </MASM>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="README">
+      <Filter>Source Files</Filter>
+    </None>
   </ItemGroup>
 </Project>
