--- a/asm_project02.vcxproj.filters
+++ b/asm_project02.vcxproj.filters
@@ -19,4 +19,14 @@
       <Filter>Source Files</Filter>
     </None>
   </ItemGroup>
+  <ItemGroup>
+    <MASM Include="CallProc_64.asm">
+      <Filter>Source Files</Filter>
+    </MASM>
+  </ItemGroup>
+  <ItemGroup>
+    <Object Include="..\..\Irvine\Irvine64.obj">
+      <Filter>Source Files</Filter>
+    </Object>
+  </ItemGroup>
 </Project>
